# longevity-forest

./: .gitignore  AGENTS.md  README.md  pyproject.toml
data/example/: nrf2-atomica-analysis.md  nrf2-seq2func-report.md  nrf2_analysis.md  nrf2_atomica_analysis.md
docs/: insilico_knockout_implementation.md  system_prompt_update.md
src/longevity_forest/: __init__.py  main.py
src/longevity_forest/config/: GENE_ANALYSIS_TOOL_MAPPING.md  __init__.py  gene_analysis_mcp.py  llm.py  mcp.py  prompts.py
src/longevity_forest/config/agents/: insilico_knockout.yaml  protein_hunter.yaml  web_search_delegated.yaml  web_search_full.yaml
src/longevity_forest/core/: __init__.py  experts.py  helpers.py
